Sticky flicker fixed

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -148,14 +148,7 @@
     .sort-categories-parent {
         background-color: $teal;
 
-        &.sticky {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            width: 100%;
-            z-index: 10;
-        }
+
     }
 
     .sort-categories-header,
@@ -358,3 +351,15 @@
 }
 
 
+.sticky {
+    padding-top: 85.6px;
+
+    #sort_categories_parent {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        z-index: 10;
+    }
+}
